# Job-recommendation-backend

./: .env.example  .gitignore  COMMANDS.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAPIDAPI_COMPLETE_SUMMARY.md  RAPIDAPI_INTEGRATION.md  RAPIDAPI_QUICKREF.md  RAPIDAPI_START_HERE.md  RAPIDAPI_WHATS_NEW.md  README.md  add_user.py  add_user_api.py  example_import.py  fix_schema.py  main.py  migrate_db.py  pyproject.toml  recreate_db.py  render.yaml  requirements.txt  reset_db.py  test_backend.py  test_rapidapi.py
app/: __init__.py  auth.py  config.py  crud.py  database.py  main.py  ml_service.py  models.py  models_simple.py  rapidapi_service.py  schemas.py
app/routers/: admin.py  jobs.py  rapidapi.py  recommendations.py  users.py
